perf(core): make sum() O(n) and stop per-column allocation
sum() no longer routes through sumWithSteps() and discards the result;
it has its own loop, so it builds no Step records, no ArrayList growth
and no per-column snapshot.

The per-column snapshot + log line now sit behind
AppLogger.isLoggable(Level.INFO), removing the O(n) reverse-per-column
work from the default path: sum() time and allocation go from O(n^2) to
O(n) (bytes ~= 2n + 128). With INFO on, the step message is logged as
pattern + parameters instead of a pre-rendered sentence.

Also: char append instead of int append in the result builder, one
reused scratch StringBuilder for snapshots in sumWithSteps(), and
Collections.unmodifiableList instead of List.copyOf.

No public API change: sum, sumWithSteps, SumResult, Step and the
MessageFormat step sentence are untouched; AppLogger gains isLoggable.

At n = 100,000 with INFO off: sum() 3,726x faster and 50,056x less
allocated (1,080.400 ms / 10.0 GB -> 0.290 ms / 200 kB per call).
Measured with Bench.java; before/after numbers in docs/performance.md.